syntax = "proto3";
package v1;

message Article{
	string api = 1;
	string id = 2;
	string title = 3;
	string date = 4;
	string body = 5;
	repeated string tags = 6;
}

message ArticleRequest{
	string api = 1;
	string id = 2;
	string date = 3;
	string tag = 4;
}

message TagInfo{
	string api = 1;
	string tag = 2;
	string count = 3;
	repeated string articles = 4;
	repeated string related_tags = 5;
}

// Service to manage Article tasks
service ArticleService {
	rpc GetArticle(ArticleRequest) returns (Article){}
	rpc GetTagInfo(ArticleRequest) returns (TagInfo){}
}
